--- a/css/project.css
+++ b/css/project.css
@@ -18,7 +18,6 @@ video {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .audio-gallery ul {
@@ -142,9 +141,15 @@ video {
   max-width: 200px;
 }
 
-/*.fit-box {
-  width: fit-content;
-}*/
+.creator-info > div > *:first-child,
+.project-info > div > *:first-child {
+  margin-top: 0;
+}
+
+.creator-info > div > *:last-child,
+.project-info > div > *:last-child {
+  margin-bottom: 0;
+}
 
 .project-layout {
   display: flex;
